--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <!-- fontes and icon -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Sora:wght@100..800&display=swap" rel="stylesheet">   
     <script src="https://kit.fontawesome.com/abe42b26ac.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -27,14 +30,14 @@
 
         <div class="social-media">
             <a href="">
-                <i class="fa-brands fa-instagram fa-2xl" style="color: #0d0d0d;"></i>
+                <i class="fa-brands fa-instagram fa-2xl" style="color: #1D1D1B;"></i>
             </a>
             <a href="">
-                <i class="fa-brands fa-facebook fa-2xl" style="color: #0d0d0d;"></i>
+                <i class="fa-brands fa-facebook fa-2xl" style="color: #1D1D1B;"></i>
             </a>
 
             <a href="">
-               <i class="fa-brands fa-whatsapp fa-2xl" style="color: #0d0d0d;"></i>
+               <i class="fa-brands fa-whatsapp fa-2xl" style="color: #1D1D1B;"></i>
             </a>
         </div>
     </nav>
@@ -63,26 +66,27 @@
     
     <section id="event" class="event bg-white area-site">
         <div class="event-conteiner">
-            <div class="img-principal">
-                <img src="assets/img/break dance.jpg" alt="">
-                <img src="assets/img/soccer.jpg" alt="" class="hidden" >
-                <img src="assets/img/show.jpg" alt="" class="hidden">
+
+            <div class="img-principal" >
+                <img id="img-principal" src="assets/img/break dance.jpg" alt="" class="img-event ">
+            <div class="event-slide-ball">
+
+                <i id="fa-circle-left" class="fa-solid fa-circle" style="color: #EDEDED;"></i>
+                <i id="fa-circle-middle" class="fa-solid fa-circle" style="color: #E6332A;"></i>
+                <i id="fa-circle-right" class="fa-solid fa-circle" style="color: #EDEDED;"></i>
+            </div>
             </div>
 
             <div class="event-text">
-                <i class="fa-solid fa-arrow-left" style="color: #fff;"></i>
-                <p>Break Dance</p>
-                <i class="fa-solid fa-arrow-right" style="color: #fff;"></i>
+                <i id="fa-arrow-left" class="fa-solid fa-arrow-left" style="color: #EDEDED;" onclick="changeEvent('left')"></i>
+                <span id="event-title">Break Dance</span>
+                <i id="fa-arrow-right" class="fa-solid fa-arrow-right" style="color: #EDEDED;"></i>
             </div>
 
-            <div class="event-slide-ball">
-                <i class="fa-solid fa-circle" style="color: #fff;"></i>
-                <i class="fa-solid fa-circle" style="color: red;"></i>
-                <i class="fa-solid fa-circle" style="color: #fff;"></i>
-            </div>
+            
         </div>
     </section>
 
-
+    <script src="assets/scripts/script.js"></script>
 </body>
 </html>
