start coding mobile view

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="assets/css/event.css">
     <link rel="stylesheet" href="assets/css/gallery.css">
     <link rel="stylesheet" href="assets/css/host-laws.css">
+    <link rel="stylesheet" href="assets/css/media.css">
+
 
 </head>
 <body>
