fixed responsive bugs

--- a/index.html
+++ b/index.html
@@ -259,17 +259,17 @@
       <div class="creators">
         <h4>Criado por:</h4>
 
-        <a target="_blank" href="https://www.linkedin.com/in/leonardo-maciel-s/">
+        <a href="https://www.linkedin.com/in/leonardo-maciel-s/">
           <i id="icon-footer1" class="fa-brands fa-linkedin-in"></i>
           <h5>Leonardo</h5>
         </a>
 
-        <a target="_blank" href="https://www.linkedin.com/in/eduardo-c-farias/">
+        <a href="https://www.linkedin.com/in/eduardo-c-farias/">
           <i id="icon-footer2" class="fa-brands fa-linkedin-in"></i>
           <h5>Eduardo</h5>
         </a>
 
-        <a target="_blank" href="https://www.linkedin.com/in/gabrielsoacc/">
+        <a href="https://www.linkedin.com/in/gabrielsoacc/">
           <i id="icon-footer3" class="fa-brands fa-linkedin-in"></i>
           <h5>Gabriel</h5>
         </a>
