change links social media

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
       </div>
 
       <div class="social-media">
-        <a href="https://www.instagram.com/sec.culturaplanaltina/">
+        <a target="_blank" href="https://www.instagram.com/sec.culturaplanaltina/">
           <i class="fa-brands fa-instagram fa-2xl" style="color: #ededed"></i>
         </a>
 
-        <a href="">
+        <a target="_blank" href="">
           <i class="fa-brands fa-whatsapp fa-2xl" style="color: #ededed"></i>
         </a>
 
-        <a href="">
+        <a target="_blank" href="">
           <i class="fa-brands fa-facebook-f fa-2xl" style="color: #ededed"></i>
         </a>
       </div>
